Thu Nov 21 15:36:08 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/buffering.rb: [DOC] Fix HEREDOC comment for
	  OpenSSL::Buffering which breaks overview because of RDoc bug

Thu Nov 21 14:46:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval_intern.h (SAVE_ROOT_JMPBUF): workaround for the failure of
	  test/ruby/test_exception.rb on Windows.
	  wrap by __try and __exception statements on mswin to raise SIGSEGV
	  when EXCEPTION_STACK_OVERFLOW is occurred, because MSVCRT doesn't
	  handle the exception.
	  however, (1) mingw-gcc doesn't support __try and __exception
	  statements, and (2) we cannot retry SystemStackError after this
	  change yet (maybe crashed) because SEH and longjmp() are too
	  uncongenial.

	* signal.c (check_stack_overflow, CHECK_STACK_OVERFLOW): now defined on
	  Windows, too.

	* thread_win32.c (ruby_stack_overflowed_p): ditto.

Thu Nov 21 14:18:24 2013  Zachary Scott  <e@zzak.io>

	* object.c: [DOC] Clarify Object#dup vs #clone [Bug #9128]
	  Moving existing doc for this comparison to separate section of #dup
	  Adding examples to document behavior of #dup with Module#extend.
	  Based on a patch by stevegoobermanhill

Thu Nov 21 14:06:02 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_marks_check): do not dump all refs.

	* gc.c (allrefs_dump_i): fix output format.

Thu Nov 21 13:43:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change RGENGC_CHECK_MODE (>= 2) logic.
	  Basically, make an object graph of all of living objects before and
	  after marking and check status.

	  [Before marking: check WB sanity]
	  If there is a non-old object `obj' pointed from old object
	  (`parent') then `parent' or `obj' should be remembered.

	  [After marking: check marking miss]
	  Traversible objects with the object graph should be marked.
	  (However, this alert about objects pointed by machine context
	   can be false positive. We only display alert.)

	  [Implementation memo]
	  objspace_allrefs() creates an object graph.